style(lifecycle): use Stream.toList() in CostCenterParticipant
Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>